--- a/settings.gradle
+++ b/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "Android Metaperson Sample"
+rootProject.name = "Metaperson Showcase"
 include ':app'
